derive_tests/tests/compile_fail/custom_not_string.rs
use validify::Validate;

#[derive(Validate)]
struct Test {
    #[validate(custom = 2)]
    s: String,
}

fn main() {}
